fixed landing page on mobile and added a new blog no stuff there yet

--- a/index.css
+++ b/index.css
@@ -74,9 +74,20 @@ body{
     border: solid var(--less_gray) 0.5px;
 }
 
+@media screen and (min-width:320px){
+    main{
+        margin: 0 0;
+    }
+}
+
+@media screen and (min-width: 500px){
+    main{
+        margin: 0 auto;
+    }
+}
+
 main{
     max-width: 1000px;
-    margin: 0 auto;
     flex: 1;
     font-family: "Source Sans 3", 'Times New Roman', Times, serif;
     display: block;
@@ -139,14 +150,14 @@ main h1{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, minmax(100px,auto));
     gap: 15px;
-    overflow: auto;
+    overflow-x: auto;
     scrollbar-width: thin;
     scrollbar-color: var(--less_gray) var(--main_bg_color);
-    flex-wrap: nowrap;
 }
 
 .grid_item{
     background-color: var(--darker_blue);
+    min-width: 100px;
     padding: 10px;
     border: none;
     border-radius: 20px;
